# gnc-project

./: CMakeLists.txt  README.md  TESTING.md  flight_log.csv
config/: gnc_config.yaml  mission_profile.yaml  vehicle_config.yaml
docs/: README.md
include/: constants.h  gnc_system.h
include/control/: actuator_controller.h  pid_controller.h  rate_controller.h
include/estimation/: ekf.h  state_estimator.h
include/flight_loop/: flight_loop.h
include/guidance/: guidance_law.h  trajectory_planner.h
include/sensors/: barometer.h  gps.h  imu.h
include/utils/: config_loader.h  data_logger.h  math_utils.h  types.h
src/: gnc_system.cpp  main.cpp
src/control/: actuator_controller.cpp  pid_controller.cpp  rate_controller.cpp
src/estimation/: ekf.cpp  state_estimator.cpp
src/flight_loop/: flight_loop.cpp
src/guidance/: guidance_law.cpp  trajectory_planner.cpp
src/sensors/: barometer.cpp  gps.cpp  imu.cpp
src/utils/: config_loader.cpp  data_logger.cpp  math_utils.cpp
tests/: CMakeLists.txt  README.md  control_test.cpp  estimation_test.cpp  integration_test.cpp  math_utils_test.cpp  run_tests.sh  sensors_test.cpp
